# nickname_generator

./: .gitignore  Cargo.toml
data/: pos.txt  syntactic_annotation.txt  syntactic_argument.txt  type.txt
opendict/: api_getter.py
src/: crawl.rs  generator_main.rs  init.rs  main.rs  prelude.rs  reform.rs  tui.rs
src/data_collector/: mod.rs
src/data_collector/opendict/: mod.rs  v1.rs
src/generator/: mod.rs  opendict.rs
src/tui/: opendict_inspect.rs  opendict_query.rs  opendict_select.rs
