[package]
name = "nickname_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34.7"
serde = "1.0.197"
serde_json = "1.0.114"
reqwest = "0.11.24"
tracing = { version = "0.1.40", features = ["release_max_level_info", "max_level_trace"] }
tracing-subscriber = "0.3.18"
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["full"] }
