[package]
name = "nickname_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = "0.12.7"
tracing = { version = "0.1.40", features = ["release_max_level_info", "max_level_trace"] }
tracing-subscriber = "0.3.18"
once_cell = "1.19.0"
tokio = { version = "1.40.0", features = ["full"] }
time = { version = "0.3.36", features = ["formatting", "macros", "parsing", "serde"] }
clap = "4.5.16"
flate2 = "1.0.33"
